--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,17 @@
             </intent-filter>
         </service>
 
+        <service
+            android:name=".TvModeToggleTileService"
+            android:exported="true"
+            android:icon="@drawable/ic_bluetooth"
+            android:label="20.5:9模式"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
