--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,6 +78,17 @@
             </intent-filter>
         </service>
 
+        <service
+            android:name=".MainToggleTileService"
+            android:exported="true"
+            android:icon="@drawable/ic_bluetooth"
+            android:label="总开关"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
